--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^8.0.1",
     "pg": "^8.18.0",
+    "resend": "^6.9.2",
     "stripe": "^20.3.1"
   }
 }
