--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
   "description": "LUXE BERLIN Official Backend",
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
     "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^8.0.1",
     "pg": "^8.18.0",
     "resend": "^6.9.2",
+    "sharp": "^0.34.5",
     "stripe": "^20.3.1"
   }
 }
