--- a/package.json
+++ b/package.json
@@ -12,22 +12,22 @@
   "type": "commonjs",
   "description": "LUXE BERLIN Official Backend",
   "dependencies": {
-    "bcryptjs": "^3.0.3",
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.0",
-    "compression": "^1.8.1",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.6",
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.1.5",
-    "multer": "^2.0.2",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "node-cron": "^4.2.1",
-    "nodemailer": "^8.0.1",
-    "pg": "^8.18.0",
-    "resend": "^6.9.2",
-    "sharp": "^0.34.5",
-    "stripe": "^20.3.1"
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.7",
+    "pg": "^8.11.3",
+    "resend": "^3.1.0",
+    "sharp": "^0.32.6",
+    "stripe": "^14.5.0"
   }
 }
